@@ -4,6 +4,7 @@
 [attr3~=val3_2] {prop6: val6}
 [attr2=val2] {prop5: val5}
 :first-child {first-child-prop: first-child-value}
+:lang(fr) {lang-prop: lang-value}
 E2[attr2=val2] {prop8: val8}
 E0 {prop0: val0}
 E0+E1{pro1:val1} 
